# aoc2021

./: Cargo.toml  README.md
data/: day1-1.txt  day2-1.txt
src/: day01-1.rs  day01-2.rs  day02-1.rs  day02-2.rs  day02.rs
