[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01-1"
path = "src/day01-1.rs"

[[bin]]
name = "day01-2"
path = "src/day01-2.rs"

[[bin]]
name = "day02-1"
path = "src/day02-1.rs"

[[bin]]
name = "day02-2"
path = "src/day02-2.rs"

[dependencies]
thiserror = "1.0.26"
